Keep temp files until a new temp dir is created

BUG: 477903